[package]
name = "pla2html"
description = "A convertor for PLA files to HTML grid/charts."
version = "0.1.0"
authors = ["Scott Johnson <scott@foamfactory.io>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "3.0", features = ["derive"] }
horrorshow = "0.8.4"
regex = "1"

[dev-dependencies]
